--- a/footer-eng.htm
+++ b/footer-eng.htm
@@ -1,48 +1,112 @@
-<!-- <noindex> --> 
-
-
 <!-- FOOTER BEGINS | DEBUT DU PIED DE LA PAGE -->
-	<div class="footer"><div class="bookmarknew">
+<footer>
 
+ <!-- Date Modified Begins | Debut de la date de modification -->
+  		<div id="footerDivider">
+  			<div class="inner">
+  				<span id="termsTrans"><a href="/2013/admin/tca-eng.html">Terms and Conditions</a> | <a href="http://www.fin.gc.ca/disclose-divulgation/discl_index-eng.asp">Transparency</a></span>
+  				<span class="date" id="dateModified">Date modified: <%=Response.Write (sdDateModified)%></span>
+      	</div>
+  		</div>
+  <!-- Date Modified Ends | Fin de la date de modification -->
 
-<!-- AddThis Button BEGIN -->
-<div class="noprint">
-<a class="addthis_button" href="http://www.addthis.com/bookmark.php?v=250&amp;username=brianp"><img src="http://s7.addthis.com/static/btn/v2/lg-share-en.gif" width="125" height="16" alt="Bookmark and Share" style="border:0"/></a>
-<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#username=brianp"></script>
-</div>
-<div id="sharepartagez">No endorsement of any products or services is expressed or implied.</div>
-<!-- AddThis Button END -->
+	<div id="deptFooter">
 
+  			<ul class="inner">
+  				<li>
+  					<h2><a href="/2013/admin/au-an-eng.html">About Us</a></h2>
+  					<ul>
+  						<li><a href="/2013/admin/au-an-eng.html">Our Mandate</a></li>
+  						<li><a href="../pdfarch/index-eng.html">Previous Budgets</a></li>
+  						<li><a href="http://www.fin.gc.ca/fin-eng.asp ">Finance Canada (fin.gc.ca)</a></li>
+  						<li><a href="http://www.fin.gc.ca/pub/index-eng.asp ">Finance Canada Publications</a></li>
+  					</ul>
+  				</li>
+  				<li>
+  					<h2><a href="/2013/doc/nrc/2013-03-21-eng.html">News</a></h2>
+  					<ul>
+  						<li><a href="/2013/doc/nrc/2013-03-21-eng.html">Budget News Releases</a></li>
+  						<li><a href="/2013/doc/speech-discours/index-eng.html">Budget Speech</a></li>
+  						<li><a href="http://www.fin.gc.ca/news-nouvelles/nr-nc-eng.asp ">Finance Canada News Releases</a></li>
+  					</ul>
+  				</li>
+  				<li>
+  					<h2><a href="/2013/admin/contact-eng.html">Contact Us</a></h2>
+  					<ul>
+  						<li><a href="/2013/admin/help-aide-eng.html">Help</a></li>
+  					</ul>
+  				</li>
+  				<li>
+  					<h2><a href="/2013/admin/sc-rb-eng.html">Stay Connected</a></h2>
+  					<ul>
+                      	<li><a href="http://www.flickr.com/photos/fincanada ">Flickr</a></li>
+  						<li><a href="http://twitter.com/financecanada ">Twitter</a></li>
+                          <li><a href="http://www.youtube.com/user/financecanada">YouTube</a></li>
+  						<li><a href="/2013/admin/sc-rb-eng.html#rss">RSS Feeds</a></li>
+  						<li><a href="http://www.fin.gc.ca/scripts/register-eng.asp ">Email Alerts</a></li>
+  					</ul>
+  				</li>
+  			</ul>
 
-</div>
-	<div class="footerline"></div>
-	<div class="foot1">
+  		</div> <!-- end of desktopFooter -->
 
-	<!-- DATE MODIFIED BEGINS | DEBUT DE LA DATE DE MODIFICATION -->
-	Date Modified: <span class="date"><%=Response.Write (sdDateModified)%> </span>
-	<!-- DATE MODIFIED ENDS | FIN DE LA DATE DE MODIFIC -->
+      <!--  -->
+  		<div id="bottomBlackBar">
+  			<div class="inner">
 
+  				<ul>
+  					<li><a href="http://healthycanadians.gc.ca/index-eng.php"><strong>HEALTH</strong><br/>healthycanadians.gc.ca</a></li>
+  					<li><a href="http://www.voyage.gc.ca/index-eng.asp"><strong>TRAVEL</strong><br/>travel.gc.ca</a></li>
+  					<li><a href="http://www.servicecanada.gc.ca/eng/home.shtml"><strong>SERVICE CANADA</strong><br/>servicecanada.gc.ca</a></li>
+  					<li><a href="http://www.jobbank.gc.ca/intro-eng.aspx"><strong>JOBS</strong><br/>jobbank.gc.ca</a></li>
+  					<li><a href="http://actionplan.gc.ca/eng/index.asp"><strong>ECONOMY</strong><br/>actionplan.gc.ca</a></li>
+  				</ul>
 
+  				<a class="canLink" href="http://www.canada.gc.ca/home.html">Canada.gc.ca</a>
 
+  			</div>
+  	 	</div> <!-- end of bottomBlackBar -->
 
-	</div>
-	<div class="foot2"><a href="#tphp" title="Return to Top of Page"><img class="uparrow" src="/images/uparrow-footer.gif" width="100" height="15" alt="" /><br />Top of Page</a></div>
-	<div class="foot3"><a href="/admin/notices-avis-eng.asp">Important Notices</a></div>
-	</div>
+  	 </footer>
 <!-- FOOTER ENDS | FIN DU PIED DE LA PAGE -->
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-9112177-1");
-_gat._anonymizeIp();
-pageTracker._trackPageview();
 
-// Create an event tracker object with the name "Contact"
-var emailClicker = pageTracker._createEventTracker ('Contact');
 
-} catch(err) {}</script>
+  </div> <!-- end of container -->
 
-<!-- </noindex> -->  
+  <!-- <div id="backtotop">
+
+  	Back To Top</div> -->
+
+  <!-- Twitter Plugin on Homepage - Begin -->
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+  <!-- Twitter Plugin on Homepage - End -->
+
+  <script type="text/javascript">
+  // fix pre overflow in IE
+  (function ($) {
+  	$.fn.fixOverflow = function () {
+  		if ($.browser.msie) {
+  			return this.each(function () {
+  				if (this.scrollWidth > this.offsetWidth) {
+  					$(this).css({ 'padding-bottom' : '20px', 'overflow-y' : 'hidden' });
+  				}
+  			});
+  		} else {
+  			return this;
+  		}
+  	};
+  })(jQuery);
+  $('pre').fixOverflow();
+  </script>
+
+  <!-- Image slider on Homepage - Begin -->
+  <script type="text/javascript">
+  	//initializes the jshowoff slider
+  	$(document).ready(function(){ $('#features').jshowoff(); });
+  </script>
+  <!-- Image slider on Homepage - End -->
+
+
+
+
+
