--- a/index-BD-eng.htm
+++ b/index-BD-eng.htm
@@ -1,77 +1,95 @@
-<!-- Toolkit Markup... Do not remove this line -->
+  <div id="mainContent" class="inner scrollingNav">
 
-<!-- RIGHT SIDE MENU BEGINS | DEBUT DU MENU LATERAL DROIT -->
+  <!-- BREAD CRUMB Begins | Debut DE LA PISTE DE NAVIGATION -->
+  <p class="breadcrumb">
+  <a href="http://www.fin.gc.ca/fin-eng.asp">Home</a>&nbsp;&gt;&nbsp;<a href="/act/index-eng.asp">Activities and issues</a>&nbsp;&gt;&nbsp;<a href="http://www.fin.gc.ca/access/social-eng.asp">Social Issues</a>&nbsp;</p>
+<%
+            writeFinBreadCrumbs ()
+     
+          %>
 
-<div class="right"> 
-	
-	<!--#include virtual="/common/rightcol/search-eng.asp"-->
-	<div class="wedge"> 
-		<!-- --> 
-	</div>
-	<!--#include virtual="/common/rightcol/aboutus-eng.asp"-->
-	<div class="wedge"> 
-		<!-- --> 
-	</div>
-</div>
+  <!-- BREAD CRUMB ENDS | FIN DE LA PISTE DE NAVIGATION -->
 
-<!-- RIGHT SIDE MENU ENDS | FIN DU MENU LATERAL DROIT -->
-<% Call closeRightDivOpenContentsDiv %>
+  <!-- Left side menu Begins | Debut du Menu Lateral Gauche -->
+<!--  <nav id="sideNav">
+    <h3> Side Nav</h3>
+          <li> <a href="/2013/doc/plan/toc-tdm-eng.html">Acts and Regulations</a>
+            <ul>
+            <li><a href="/2013/doc/plan/chap1-eng.html#a0-Chapter-1:-Introduction"> <span class="cH1">Draft Legislation (1996 - present)</span></a></li>
+            <li><a href="/2013/doc/plan/chap2-eng.html#a0-Chapter-2:-Economic-Developments-and-Prospects"> <span class="cH1">Bills (1997 - present)</span></a></li>
+            <li><a href="/2013/doc/plan/chap2-eng.html#a0-Chapter-2:-Economic-Developments-and-Prospects"> <span class="cH1">Forward Regulatory Plan</span></a></li>
+            <li><a href="/2013/doc/plan/chap2-eng.html#a0-Chapter-2:-Economic-Developments-and-Prospects"> <span class="cH1">List of Acts and Regulations</span></a></li>
+            </ul>
+        </li>
+    </nav> -->
+  <!-- Left side menu Ends | Fin du Menu Lateral Gauche --> 
+
+  <!-- Content Begins | Debut Du Content -->
+  <div id="content">
+    <h1>Social Issues</h1>
 
 
- 
-<div class="centerbluebar2"><h1 id="a01">About Finance Canada</h1></div>
-<p>The Department helps the Government of Canada develop and implement strong   and sustainable economic, fiscal, tax, social, security, international and   financial sector policies and programs. It plays an important central agency   role, working with other departments to ensure that the government's agenda is   carried out and that ministers are supported with high-quality analysis and   advice.</p>
-<p>The Department's responsibilities include the following:</p>
-<ul>
-  <li>Preparing the federal Budget and the Update of Economic and Fiscal   Projections;</li>
-  <li>Preparing the Annual Financial Report of the Government of Canada and, in   cooperation with the Treasury Board of Canada Secretariat and the Receiver   General for Canada, the Public Accounts of Canada;</li>
-  <li>Developing tax and tariff policy and legislation; Managing federal borrowing   on financial markets;</li>
-  <li>Designing and administering major transfers of federal funds to the provinces   and territories;</li>
-  <li>Developing financial sector policy and legislation; and</li>
-  <li>Representing Canada in various international financial institutions and   groups.</li>
-</ul>
-<p>The Minister of Finance is accountable for ensuring that his responsibilities   are fulfilled both within his portfolio and with respect to the authorities   assigned through legislation. In particular, the Minister has direct   responsibility for a number of acts as well as fiscal and tax policy relating to   other acts that are under the responsibility of other ministers.</p>
+   <p>The Department of Finance plays a central role in supporting the national
+    dimensions of health and social programs that contribute greatly to the
+    well-being of all Canadians. This includes managing over $50 billion in
+    annual financial transfers that the Government of Canada provides to support
+    the provincial and territorial provision of health, social and other
+    programs, so that Canadians can enjoy comparable services at comparable tax
+    rates regardless of where they live. </p>
+  <p>Through the budget process, the Department also plays a key role in the
+  development of Government policies relating to aboriginal issues, labour
+  markets, immigration, disability, health, justice, education, sport and culture.
+  The Department also has core responsibilities related to important income
+  support programs like Employment Insurance (EI), the Canada Pension Plan (CPP),
+  and Old Age Security (OAS). </p>
+  <p>Canada's First Ministers agree to a new health plan to improve access to quality care for all Canadians.</p>
+        <ul>
+        <li><a href="http://www.hc-sc.gc.ca/hcs-sss/delivery-prestation/fptcollab/2004-fmm-rpm/index-eng.php">A 10-year plan to strengthen health care (2004)</a></li>
+        <li><a href="http://www.hc-sc.gc.ca/hcs-sss/delivery-prestation/fptcollab/2003accord/index-eng.php">The Health Care Renewal Accord 2003</a></li>
+      </ul>
 
-<p><a href="http://www.flickr.com/photos/fincanada/"> Flickr</a> | <a href="/admin/gallery-galerie/index-eng.asp">Photo Gallery (2009-2013)</a></p>
-<div class="td_box">
-	<div class="TDcontainer"><a href="/tax-impot/2012/html-eng.asp" class="efp_boxTextBoldClass" >Your Tax Dollar</a>
-		<div class="TDsubtitle">Quick overview of where your Tax Dollar went in the Fiscal year ending March 31, 2012</div>
-	</div>
-</div>
+    <p>Employment insurance (EI), the Canada Pension Plan (CPP) and more require federal government support. Finance Canada has a role in providing advice in these areas and in the financial support of federal social programs.&nbsp;</p>
+    <ul>
+    <li><a href="../fedprov/cht-eng.asp">Canada Health Transfer</a></li>
 
- 
-  <p><img src="/images/Historybanner.jpg" alt="" width="386" height="68" /></p>
-<div id="hisTitle">
-  	<h2 class="resetSpacing" id="a02">145 YEARS AND COUNTING<br />
-    HISTORY OF THE DEPARTMENT OF FINANCE</h2>
+      <li><a href="../fedprov/cst-eng.asp">Canada Social Transfer</a></li>
+    </ul>
+  <h2>Pooled Registered Pension Plans (PRPPs)</h2>
+  <ul>
+    <li><a href="../act/prpp-prac/index-eng.asp">Helping Canadians save for their Retirement with  Pooled Registered Pension Plans </a></li>
+  </ul>
+  <h3>Technical Backgrounders<a name="Fact" id="Fact">&nbsp;</a></h3>
+  <ul>
+    <li><a href="../activty/pubs/pension/prpp-irpac-eng.asp">Framework for Pooled Registered Pension Plans</a> <em>(December 2010)</em></li>
+  </ul>
+  <h2>Research Working Group on Retirement Income Adequacy<a name="Research">&nbsp;</a></h2>
+  <ul>
+      <li><a href="../activty/pubs/pension/riar-narr-eng.asp">Summary Report on Retirement Income Adequacy Research</a> <em>(December 2009)</em></li>
+    <li><a href="../activty/pubs/pension/ref-bib/baker-eng.asp">Baker, Michael and Kevin Milligan 2009, &quot;Government and Retirement Incomes in Canada&quot;</a>.</li>
+    <li><a href="../activty/pubs/pension/ref-bib/davies-eng.asp">Davies, James 2009, &quot;Efficiency and Effectiveness of Savings Instruments Design&quot;</a>.</li>
+    <li><a href="../activty/pubs/pension/ref-bib/hamilton-eng.asp">Hamilton, Malcolm 2009, &quot;Investment and Longevity Risks&quot;</a>.</li>
+    <li><a href="../activty/pubs/pension/ref-bib/horner-eng.asp">Horner, Keith 2009, &quot;Retirement Saving by Canadian Households&quot;</a>.</li>
+    <li><a href="../activty/pubs/pension/ref-bib/jog-eng.asp">Jog Vijay 2009, &quot;Investment Performance and Costs of Pension and other Retirement Savings Funds in Canada: Implications for Wealth Accumulation and Retirement&quot;</a>.</li>
+    <li><a href="../activty/pubs/pension/ref-bib/whitehouse-eng.asp">Whitehouse, Edward 2009, &quot;Canada's Retirement &ndash;Income Provision: An International Perspective&quot;</a>.</li>
+  </ul>
+  <h2><strong>Related Links<a name="links">&nbsp;</a></strong></h2>
+
+    <ul>
+      <li><a href="http://www.osfi-bsif.gc.ca/osfi/index_e.aspx?DetailID=499">Actuarial Reports</a>: includes access to reports on the Canada Pension Plan (Office of the Chief Actuary of Canada)</li>
+  <li><a href="http://www1.servicecanada.gc.ca/eng/isp/cpp/cpptoc.shtml">Canada Pension Plan</a> - current information (Service Canada)</li>
+
+      <li><a href="http://www.cppib.ca/">CPP Investment Board</a>: information on the management of CPP assets</li>
+
+      <li><a href="http://www.hrsdc.gc.ca/en/employment/ei/index.shtml">Employment Insurance</a> - current information (Human Resources and
+    Skills Development Canada)</li>
+
+
+      <li><a href="http://www.collectionscanada.gc.ca/webarchives/20071115033942/http://www.fin.gc.ca/cpp/indexe.html">Financing the Canada Pension Plan</a>: archive illustrating the process by which the future of the CPP was secured</li>
+
+    <li><a href="http://www.collectionscanada.gc.ca/webarchives/20071121080502/http://www.fin.gc.ca/cpp/pol/pol_e.html">Policy for Supplying Actuarial Information and Services on the Canada Pension Plan</a> <em>(December 9, 1999)</em></li>
+    </ul>
+
+
   </div>
-
-  <h3>A New Department for a New Country</h3>
-
-<p>In 1867, Canada became a self-governing dominion, comprising New Brunswick, Nova Scotia, Ontario and Quebec. The first Minister of Finance, Alexander Galt, had previously served in the same capacity for the Province of Canada (made up of parts of present-day Ontario, Quebec and Labrador).</p>
-
-  <h3>The Department's Creation and its Marching Orders</h3>
-
-  <p>The Department of Finance was one of the original departments of the Government of Canada. Others included Agriculture, the Penitentiary Service, Public Works, Post Office, Secretary of State, and the Privy Council Office.</p>
-
-  <p>Originally, the Department of Finance's primary functions were bookkeeping, administering the collecting and spending of public monies, and servicing the national debt. The total number of officers, clerks, and messengers in the Department in 1867 was twenty-eight.</p>
-<p>In June 1869, John Rose, who succeeded Alexander Galt as Finance Minister, introduced a statute spelling out the Department's duties, which were basically doing everything not assigned to anyone else.</p>
-
-  <h3>The Evolution of the Department</h3>
-
-  <p>At various times since its establishment, the Department has done the work of the Treasury Board Secretariat, the Comptroller of the Treasury, the Royal Canadian Mint and the Canadian International Trade Tribunal, as well as taking charge of tax inspection and old age and public service pensions.</p>
-<p>During World War I, the federal government borrowed from, and taxed, individual Canadians directly for the first time, through Victory Loans and income tax, which was introduced in 1917.</p>
-
-  <p>In the early 1930s the Government transferred detailed operational and program responsibilities to other departments or agencies, so the Department of Finance could concentrate on essential analytical and policy work.</p>
-
-  <p>In 1939, departmental officials developed a new approach to the federal budget. Instead of simply attempting to balance expenditures with revenues, they began to use taxing powers and spending policies to influence economic development in general. During World War II, Canadian GNP doubled and annual federal spending increased to 10 times that of the 1939 figure, significantly increasing the influence of the department. Much of that influence was exercised through its budgets.</p>
-<h3>The Bottom Line on Budgets</h3>
-
-  <p>Canada's first Budget, tabled on December 7, 1867, showed $7.4 million in receipts and $5.3 million in expenditures. Since then, there have been 142 Budgets, as well as 22 related mini-Budgets, Interim Budgets, Economic and Fiscal Updates, and Financial Statements. The shortest interval between Budgets was four months (June 18, 1971 to October 14, 1971). The longest was 16 months (February 25, 1937 to June 16, 1938).</p>
-<p>In the early years, the Budget consisted simply of a speech by the Finance Minister in the House of Commons, which was recorded by hand in Hansard. Newspaper reporters sitting in the Press Gallery made notes on the speech, from which they wrote their stories. The Department did not provide the media with special Budget documentation or briefings. By the 1960s, copies of the Budget speech were produced on an ink-fed duplicating machine and collated by hand in the Minister's office. This document was given to reporters as the Minister began his speech.</p>
-<p>The Budget process today is much more elaborate, sometimes involving footwear. No one knows for sure how or when the "tradition" of a Finance Minister wearing new shoes on Budget day began. By 2007, seven Canadian Finance Ministers had worn new shoes on Budget day, including three who made their own variations on the theme. Paul Martin sported work boots. John Crosbie wore mukluks. And Jim Flaherty, who wore new shoes on Budget Day in 2006, bought his son ice skates for Budget 2007.</p>
-<h3>The Department Today</h3>
-
-  <p>Today, as we move toward the next milestone of the 150th anniversary, the Department of Finance continues to play a vital role in helping the Government of Canada develop the social and economic policies that will further improve the standard of living and quality of life of Canadians, their families and their communities in the years to come. And it does so as one of the Government of Canada's smallest departments, with fewer than 1,000 people.</p>
-  <p>The Department of Finance Canada is established <a href="http://laws-lois.justice.gc.ca/eng/acts/F-11/page-11.html#h-10">under section 14 of the   Financial Administration Act</a>. Under section 15 of the Act, The Minister of   Finance &ldquo;has the management and direction of the Department, the management of   the Consolidated Revenue Fund and the supervision, control and direction of all   matters relating to the financial affairs of Canada not by law assigned to the   Treasury Board or to any other minister.&rdquo; Certain other authorities have also   been entrusted to the Minister of Finance through various Acts of Parliament,   including the Federal-Provincial Fiscal Arrangements Act, the Income Tax Act,   the Excise Tax Act, the Canada Business Corporations Tax, and the Proceeds of   Crime (Money Laundering) and Terrorist Financing Act, to name a few.</p>
-  <p>Supporting the <a href="/comment/minfin-eng.asp">Minister</a> in fulfilling his obligations and in providing   day-to-day management of the Department of Finance is the <a href="/comment/state-etat-eng.asp">Minister of State   (Finance)</a>, the <a href="/comment/dm-eng.asp">Deputy Minister</a>, the <a href="/comment/adm-1-eng.asp">Associate Deputy Minister and G-7 Deputy for   Canada</a>, the <a href="/comment/adm-2-eng.asp">Associate Deputy Minister</a>, and the branch <a href="/afc/org-eng.asp">Assistant Deputy   Ministers</a>. </p>
+  <!-- End of Main Content -->
+  </div>
