--- a/header.htm
+++ b/header.htm
@@ -1,200 +1,118 @@
 <head>
-<%
-	writeText (vbTAB & MSG_CLF_VERSION(iLanguageID-1))
 
-	writeText (vbTAB & MSG_TITLE_BEGINS(iLanguageID-1))
-	writeTitle ()
-	writeText (vbTAB & MSG_TITLE_ENDS(iLanguageID-1) & vbCRLF)
-	writeText (vbTAB & MSG_METADATA_BEGINS(iLanguageID-1) & vbCRLF)
-	writeText (vbTAB & "<meta http-equiv=" & chr(34) & "Content-Type" & chr(34) & " content=" & chr(34) & "text/html; charset=iso-8859-1" & chr(34) & " />")
-'	writeText (vbTAB & "<link rel=" & chr(34) & "schema.dc" & chr(34) & " href=" & chr(34) & "http://purl.org/dc/elements/1.1/" & chr(34) & " />")
-'	writeText (vbTAB & "<link rel=" & chr(34) & "schema.dcterms" & chr(34) & " href=" & chr(34) & "http://purl.org/dc/terms/" & chr(34) & " />")	
-	
-	writeResourceMetaTags ()
-	writeText (vbTAB & MSG_METADATA_ENDS(iLanguageID-1) & vbCRLF)		
-	if sView="printable" Then
-		call loadProperStyleSheet ("printable")
-	else
-		call loadProperStyleSheet ("non-printable")
-	end if
-	writeHeadScript ()  
+<!-- Title Begins | Debut du titre -->
+  <title>Test Page</title>
+<!-- Title Ends | Fin du titre -->
 
-'added MP mar23 2009
-writeText ("<script src=""/SpryAssets/SpryTabbedPanels.js"" type=""text/javascript""></script>" & vbCRLF)
-writeText ("<link href=""/SpryAssets/SpryTabbedPanels.css"" rel=""stylesheet"" type=""text/css"" />" & vbCRLF)
-
-'added BP may27 2009
-if jen="1" Then
-writeText ("<script src=""common/showhide.js"" type=""text/javascript""></script>" & vbCRLF)
-	else
-		
-'writeHeadScript () 	
-end if
-
-
-
-
-
-
-
-'added BP June 7 2009  Autocomplette script %>
-<script src="/jQuery/jquery-1.3.2.min.js" type="text/javascript"></script>
-
-
-
-
-
-
-
-
-
-
-<script src="/jQuery/pe-ap.js" type="text/javascript"></script>
-<script type="text/javascript">
-var params = {
-	lng: "eng", pngfix:"images/inv.gif"
-	share: { compact: "" /*false*/, popup: "true" }
-};
-PE.progress(params);
-</script>
-
-
-
-
-
-
-
+<!-- Metadata Begins | Debut Des Metadonnees -->
 
 <%
+	'iLanguageID = 1 for EN
+	'iLanguageID = 2 for FR
 
-'added Brian P sept 4 2009
+	dim Metadata_eng = "<meta charset=" & chr(34) & "utf-8" & chr(34) & " />
+	<!-- tell IE to use newest renderer or Chrome Frame if available (NOTE: The W3 Validator doesn't like this line but it is correct) -->
+	<meta http-equiv=" & chr(34) & "X-UA-Compatible" & chr(34) & " content=" & chr(34) & "IE=EmulateIE8,chrome=1" & chr(34) & " />
+	<!-- tell mobile devices to not render full site zoomed out -->
+	<meta name=" & chr(34) & "viewport" & chr(34) & " content=" & chr(34) & "width=device-width,initial-scale=1" & chr(34) & " />
+	<meta name=" & chr(34) & "description" & chr(34) & " content=" & chr(34) & "A simplified, readable version of the Web Experience Toolkit using HTML5 and LESS" & chr(34) & " />
+	<meta name=" & chr(34) & "keywords" & chr(34) & " content=" & chr(34) & "Web, reusable components, toolkit, accessibility, usability, open source software" & chr(34) & " />
+	<meta name=" & chr(34) & "dcterms.title" & chr(34) & " content=" & chr(34) & "Web Experience Toolkit Lite (WETLite)" & chr(34) & " />
+	<meta name=" & chr(34) & "dcterms.description" & chr(34) & " content=" & chr(34) & "A simplified, readable version of the Web Experience Toolkit using HTML5 and LESS" & chr(34) & " />
+	<meta name=" & chr(34) & "dcterms.creator" & chr(34) & " content=" & chr(34) & "Government of Canada, Department of Finance" & chr(34) & " />
+	<meta name=" & chr(34) & "dcterms.issued" & chr(34) & " title=" & chr(34) & "W3CDTF" & chr(34) & " content=" & chr(34) & "YYYY-MM-DD" & chr(34) & " />
+	<meta name=" & chr(34) & "dcterms.modified" & chr(34) & " title=" & chr(34) & "W3CDTF" & chr(34) & " content=" & chr(34) & "YYYY-MM-DD" & chr(34) & " />
+	<meta name=" & chr(34) & "dcterms.subject" & chr(34) & " title=" & chr(34) & "gccore" & chr(34) & " content=" & chr(34) & "Internet;Standards;Design" & chr(34) & " />
+	<meta name=" & chr(34) & "dcterms.language" & chr(34) & " title=" & chr(34) & "ISO639-2/T" & chr(34) & " content=" & chr(34) & "eng" & chr(34) & " />"
 
-writeText ("<script src=""/SpryAssets/SpryAccordion.js"" type=""text/javascript""></script>" & vbCRLF)
-writeText ("<link href=""/SpryAssets/SpryAccordion.css"" rel=""stylesheet"" type=""text/css"" />" & vbCRLF)
+	dim Metadata_fra = "<meta charset=" & chr(34) & "utf-8" & chr(34) & " />
+	<!-- tell IE to use newest renderer or Chrome Frame if available (NOTE: The W3 Validator doesn't like this line but it is correct) -->
+	<meta http-equiv=" & chr(34) & "X-UA-Compatible" & chr(34) & " content=" & chr(34) & "IE=EmulateIE8,chrome=1" & chr(34) & " />
+	<!-- tell mobile devices to not render full site zoomed out -->
+	<meta name=" & chr(34) & "viewport" & chr(34) & " content=" & chr(34) & "width=device-width,initial-scale=1" & chr(34) & " />
+	<meta name=" & chr(34) & "description" & chr(34) & " content=" & chr(34) & "A simplified, readable version of the Web Experience Toolkit using HTML5 and LESS" & chr(34) & " />
+	<meta name=" & chr(34) & "keywords" & chr(34) & " content=" & chr(34) & "Web, reusable components, toolkit, accessibility, usability, open source software" & chr(34) & " />
+	<meta name=" & chr(34) & "dcterms.title" & chr(34) & " content=" & chr(34) & "Web Experience Toolkit Lite (WETLite)" & chr(34) & " />
+	<meta name=" & chr(34) & "dcterms.description" & chr(34) & " content=" & chr(34) & "A simplified, readable version of the Web Experience Toolkit using HTML5 and LESS" & chr(34) & " />
+	<meta name=" & chr(34) & "dcterms.creator" & chr(34) & " content=" & chr(34) & "Government of Canada, Department of Finance" & chr(34) & " />
+	<meta name=" & chr(34) & "dcterms.issued" & chr(34) & " title=" & chr(34) & "W3CDTF" & chr(34) & " content=" & chr(34) & "YYYY-MM-DD" & chr(34) & " />
+	<meta name=" & chr(34) & "dcterms.modified" & chr(34) & " title=" & chr(34) & "W3CDTF" & chr(34) & " content=" & chr(34) & "YYYY-MM-DD" & chr(34) & " />
+	<meta name=" & chr(34) & "dcterms.subject" & chr(34) & " title=" & chr(34) & "gccore" & chr(34) & " content=" & chr(34) & "Internet;Standards;Design" & chr(34) & " />
+	<meta name=" & chr(34) & "dcterms.language" & chr(34) & " title=" & chr(34) & "ISO639-2/T" & chr(34) & " content=" & chr(34) & "fra" & chr(34) & " />"
 
+	If iLanguageID = 1 Then
+		Response.Write(Metadata_eng)
+	Else
+		Response.Write(Metadata_fra)
+	End If
 %>
 
+<!-- Metadata Ends | Fin des metadonnes -->
 
+	<link rel="shortcut icon" href="img/favicon.ico" />
 
+<!-- Header Scripts / JS Begin | Debut des scripts / css du Header-->
+  <!--  Main javascript include -->
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script>
+  <script src="js/budgetMain-ck.js"></script>
+<!-- Header Scripts / JS Ends | Fin des scripts / css du Header-->
 
+<!-- Header Scripts / CSS Begin | Debut des scripts / css du Header-->
+  <link rel="stylesheet" href="css/print.css" media="print" />
 
-<!--[if IE]><script type="text/javascript" src="/dmx/lib/excanvas-compressed.js"></script><![endif]-->
+  <!-- this line allows IE9 to use an SVG for gradient bgs -->
+  <!--[if gte IE 9]><style type="text/css">.navGradient,.greyGradient {filter:none;}</style><![endif]-->
 
-<script type="text/javascript" src="/dmx/dmx.core.js" id="dmxCoreJS"></script>
+	<script>
+		var fullSite = getCookie("fullSite");
+		var checkHTML = document.getElementsByTagName("HTML")[0];
+			checkHTML= checkHTML.className;
+		var notMobile = DetectDesktop();
 
+    	// If the user has a cookie saying they've previously chosen the full site, show them that
+		if (fullSite=="full" || checkHTML != "") {
+		    document.write('<link rel="stylesheet" href="css/global_ie7_ie8_frc.css" media="screen" />');
 
+			// NOTE: this also adds View Mobile link - see footer-scripts.js
 
-<script type="text/javascript">
-dir = window.location.pathname.split("/");
-if (dir[dir.length-2] != "fiscmon-revfin" ) {
-</script>
-
-<script type="text/javascript" src="/dmx/widgets/Lightbox/dmx.lightbox.js"></script>
-
-<script type="text/javascript" src="/dmx/lib/excanvas-compressed.js"></script>
-
-<link rel="stylesheet" type="text/css" href="/dmx/widgets/Lightbox/styles/default/style.css" />
-
-<link rel="stylesheet" type="text/css" href="/css/inlineStyles.css" />
-
-
-
-<script type="text/javascript">
-
-<% writeText ("var addthis_language = """ & sLangParameter & """;")%>
-var addthis_header_color = "#e3e3e3";
-var addthis_header_background = "#069";
-
-
-
-var addthis_config = {
-	"data_track_clickback":false,
- 	   "data_use_cookies":false,
-  	   "data_use_flash":false
-};
-
-
-
-
-
-<%
-
-writeText ("</script>")
-'writeText ("<script type=""text/javascript"" src=""/jQuery/glossary.js""></script>" & vbCRLF)
-
-%>
-
-
-	<script type="text/javascript" src="/jQuery/faqslider.js"></script>
-
-
-	<link type="text/css" href="/js/tabs/css/ui-lightness/jquery-ui-1.8.custom.css" rel="stylesheet" />
-	<link type="text/css" href="/js/tabs/css/style.css" rel="stylesheet" />
-
-
-
-	<script type="text/javascript" src="/js/tabs/js/jquery.ui.core.js"></script>
-
-	<script type="text/javascript" src="/js/tabs/js/jquery.ui.widget.js"></script>
-
-	<script type="text/javascript" src="/js/tabs/js/jquery.ui.tabs.js"></script>
-
-	<script type="text/javascript" src="/js/tabs/js/ui.ariaTabs.js"></script>
-
-	<script type="text/javascript">
-		$(function() {
-			var tabs1 = $("#tabs")
-			.tabs(); 
-			$("#destroylink").click(function (event) {
-				tabs1.tabs('destroy');
-			});
-			$("#selectlink").click(function (event) {
-				tabs1.tabs('select', 2);
-			});
-			$("#disablelink").click(function (event) {
-				tabs1.tabs('disable', 2);
-			});
-			$("#removelink").click(function (event) {
-				tabs1.tabs('remove', 2);
-			});
-			$("#addlink").click(function (event) {
-				tabs1.tabs('add', "/ajax/content1.html", "Added Tab");
-			});
-		});
-</script>
-
-
-
-<link rel="stylesheet" type="text/css" href="/css/banners.css" />
-
-<%'Added Legislation CSS - BP %>
-
-<link rel="stylesheet" type="text/css" href="/css/legislation-trans.css" />
-
-
-<script type="text/javascript">
-	dir = window.location.pathname.split("/");
-	if (dir[1] == "recruit-recrutement") {
-		filename = dir[dir.length-1];
-		if (filename.substr(filename.length-3) == "asp") {
-			if (filename.substr(filename.length-7,3) == "eng") {
-				var fileref = document.createElement("link")
-				fileref.setAttribute("rel", "stylesheet")
-				fileref.setAttribute("type", "text/css")
-				fileref.setAttribute("href", "universit_en.css")
-				if (typeof fileref!="undefined")
-					document.getElementsByTagName("head")[0].appendChild(fileref)
-			} else {
-				var fileref = document.createElement("link")
-				fileref.setAttribute("rel", "stylesheet")
-				fileref.setAttribute("type", "text/css")
-				fileref.setAttribute("href", "universit_fr.css")
-				if (typeof fileref!="undefined")
-					document.getElementsByTagName("head")[0].appendChild(fileref)	
+			if (notMobile != true){
+				document.documentElement.className = " onMobile";
 			}
 		}
-	}
-</script>
+		else {	// If there are no cookies...
+			if (notMobile != true){
+				document.write('<link rel="stylesheet" href="css/global_mobile.css" media="screen" />')
+			}
+			else {
+				document.write('<link rel="stylesheet" href="css/global_ie7_ie8_frc.css" media="screen" />')
+			}
+		}
+	</script>
+<!-- Header Scripts / CSS Ends | Fin des scripts / css du Header-->
+
+<!-- Google Search Script -->
+  <script type="text/javascript">
+
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-9112177-12']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+
+  </script>
+<!-- Google Search Script -->
 
 
 </head>
+
+<body class="perist-area">
+
+
+
+
+
