--- a/header.htm
+++ b/header.htm
@@ -49,17 +49,17 @@
 
 <!-- Metadata Ends | Fin des metadonnes -->
 
-	<link rel="shortcut icon" href="img/favicon.ico" />
+	<link rel="shortcut icon" href="/new_template/img/favicon.ico" />
 
 <!-- Header Scripts / JS Begin | Debut des scripts / css du Header-->
   <!--  Main javascript include -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script>
-  <script src="js/budgetMain-ck.js"></script>
+  <script src="/new_template/js/budgetMain-ck.js"></script>
 <!-- Header Scripts / JS Ends | Fin des scripts / css du Header-->
 
 <!-- Header Scripts / CSS Begin | Debut des scripts / css du Header-->
-  <link rel="stylesheet" href="css/print.css" media="print" />
+  <link rel="stylesheet" href="/new_template/css/print.css" media="print" />
 
   <!-- this line allows IE9 to use an SVG for gradient bgs -->
   <!--[if gte IE 9]><style type="text/css">.navGradient,.greyGradient {filter:none;}</style><![endif]-->
@@ -72,7 +72,7 @@
 
     	// If the user has a cookie saying they've previously chosen the full site, show them that
 		if (fullSite=="full" || checkHTML != "") {
-		    document.write('<link rel="stylesheet" href="css/global_ie7_ie8_frc.css" media="screen" />');
+		    document.write('<link rel="stylesheet" href="/new_template/css/global_ie7_ie8_frc.css" media="screen" />');
 
 			// NOTE: this also adds View Mobile link - see footer-scripts.js
 
@@ -82,10 +82,10 @@
 		}
 		else {	// If there are no cookies...
 			if (notMobile != true){
-				document.write('<link rel="stylesheet" href="css/global_mobile.css" media="screen" />')
+				document.write('<link rel="stylesheet" href="/new_template/css/global_mobile.css" media="screen" />')
 			}
 			else {
-				document.write('<link rel="stylesheet" href="css/global_ie7_ie8_frc.css" media="screen" />')
+				document.write('<link rel="stylesheet" href="/new_template/css/global_ie7_ie8_frc.css" media="screen" />')
 			}
 		}
 	</script>
