--- a/index-BD-eng.htm
+++ b/index-BD-eng.htm
@@ -11,17 +11,23 @@
   <!-- BREAD CRUMB ENDS | FIN DE LA PISTE DE NAVIGATION -->
 
   <!-- Left side menu Begins | Debut du Menu Lateral Gauche -->
-<!--  <nav id="sideNav">
-    <h3> Side Nav</h3>
-          <li> <a href="/2013/doc/plan/toc-tdm-eng.html">Acts and Regulations</a>
-            <ul>
-            <li><a href="/2013/doc/plan/chap1-eng.html#a0-Chapter-1:-Introduction"> <span class="cH1">Draft Legislation (1996 - present)</span></a></li>
-            <li><a href="/2013/doc/plan/chap2-eng.html#a0-Chapter-2:-Economic-Developments-and-Prospects"> <span class="cH1">Bills (1997 - present)</span></a></li>
-            <li><a href="/2013/doc/plan/chap2-eng.html#a0-Chapter-2:-Economic-Developments-and-Prospects"> <span class="cH1">Forward Regulatory Plan</span></a></li>
-            <li><a href="/2013/doc/plan/chap2-eng.html#a0-Chapter-2:-Economic-Developments-and-Prospects"> <span class="cH1">List of Acts and Regulations</span></a></li>
-            </ul>
-        </li>
-    </nav> -->
+ <% if sView <> "printable" Then
+      select case inumberOfColumns
+        case 2
+          %>
+                  <!-- #include virtual="/common/left-nav-eng.htm" -->
+          <%
+
+        if sDomainType <> "hrma" AND bresourceServicePagedata Then
+            if bDisableServiceLink = true then
+              writeDisabledServiceHomePageLink ()
+            else
+              writeServiceHomePageLink ()
+            end if
+          end if
+      end select
+    end if %>
+
   <!-- Left side menu Ends | Fin du Menu Lateral Gauche --> 
 
   <!-- Content Begins | Debut Du Content -->
